objects/PMC_SS_Allocation__c.object
<CustomObject>
    <description>Custom object to store the quota allocation data from O9</description>
    <fields>
        <fullName>PMC_SS_AccountManagerName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the Account Manager to whom Allocation assigned</description>
        <label>Account Manager Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PMC_SS_QuotaAllocationData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AllocatedActualQuantity__c</fullName>
        <description>Specifies the Actual Allocated Quantity</description>
        <label>Allocated Actual Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AllocationFrequency__c</fullName>
        <label>Allocation Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_AllocationPeriod__c</fullName>
        <description>Specifies the Allocation Period</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Allocation Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AllocationSummary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the Allocation Summary</description>
        <label>Allocation Summary</label>
        <referenceTo>PMC_SS_AllocationSummary__c</referenceTo>
        <relationshipLabel>Allocations</relationshipLabel>
        <relationshipName>Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ExternalUniqueIdentifier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_SS_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the Plant Location</description>
        <label>Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Location.PMC_CPQ_SAPLocationId__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Allocations</relationshipLabel>
        <relationshipName>Quota_Allocation_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ProductLocationAllocationKey__c</fullName>
        <description>Specifies the Product Location Allocation Period Key</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Location Allocation Period Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the Product</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.PMC_CPQ_SAPProductCode__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Allocations</relationshipLabel>
        <relationshipName>PMC_SS_QuotaAllocationData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_RequestedQuantity__c</fullName>
        <description>Specifies the Requested Quantity</description>
        <label>Requested Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_UnitofMeasure__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_SS_UnitOfMeasure</valueSetName>
        </valueSet>
    </fields>
    <label>Allocation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PMC_SS_AccountManagerName__c</columns>
        <columns>PMC_SS_Product__c</columns>
        <columns>PMC_SS_Location__c</columns>
        <columns>PMC_SS_AllocationPeriod__c</columns>
        <columns>PMC_SS_AllocatedActualQuantity__c</columns>
        <columns>PMC_SS_RequestedQuantity__c</columns>
        <columns>PMC_SS_AllocationFrequency__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>PMC_SS_UnitofMeasure__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AD-{000000}</displayFormat>
        <label>Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>